# telegram-pdf-bot

./: .coveragerc  .deepsource.toml  .dockerignore  .env.example  .env.test  .gcloudignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Aptfile  Dockerfile  LICENSE  Pipfile  Procfile  README.md  _typos.toml  bot.py  cov_states.py  crowdin.yml  feedback_bot.py  main.py  pdf_bot.py  pdf_bot_globals.py  pdf_bot_utils.py  pdf_cov_states.py  pom.xml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  runtime.txt  sonar-project.properties  utils.py
.do/: app.yaml
.github/: stale.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-merge.yml  build-deploy.yml  check-pull-request.yml  check-pyenv.yml  cleanup-images.yml  close-stale.yml  codacy-analysis.yml  codeql-analysis.yml  deploy-prod.yml  deploy.yml  garbage-collection.yml  github-actions.yml  label-pull-request.yml  linting.yml  lock-threads.yml  pull-request-target.yml  pull-request.yml  scheduled.yml  snyk-container-analysis.yml  snyk-scan.yml  test-build-deploy.yml  update-l10n-source-file.yml  update-l10n-source.yml  update-l10n-sources.yml  update-l10n-translations.yml  update-l10n.yml  update-translations.yml  update_license.yml
pdf_bot/: __init__.py  __main__.py  analytics.py  bot.py  compare.py  constants.py  consts.py  containers.py  crypto.py  db.py  dispatcher.py  errors.py  feedback.py  feedback_bot.py  file.py  language.py  logging.py  merge.py  models.py  mq_bot.py  payment.py  pdf_to_photo.py  pdfcat.py  photo.py  photo_to_pdf.py  scale.py  settings.py  split.py  stats.py  store.py  url.py  utils.py  watermark.py
pdf_bot/account/: __init__.py  account_repository.py  account_service.py  repository.py
pdf_bot/analytics/: __init__.py  analytics_repository.py  analytics_service.py  models.py
pdf_bot/cli/: __init__.py  cli_service.py  exceptions.py
pdf_bot/command/: __init__.py  command_handler.py  command_service.py
pdf_bot/commands/: __init__.py  compare.py  image.py  merge.py  photo.py  text.py  watermark.py
pdf_bot/compare/: __init__.py  compare_handler.py  compare_handlers.py  compare_service.py  constants.py
pdf_bot/crop/: __init__.py  crop_constants.py  crop_service.py
pdf_bot/crypto/: __init__.py  abstract_crypto_service.py  decrypt_service.py  encrypt_service.py
pdf_bot/datastore/: __init__.py  datastore_client.py
pdf_bot/decrypt/: __init__.py  decrypt_constants.py  decrypt_service.py
pdf_bot/encrypt/: __init__.py  encrypt_constants.py  encrypt_service.py
pdf_bot/error/: __init__.py  error_callback_query_handler.py  error_handler.py  error_service.py
pdf_bot/feedback/: __init__.py  exceptions.py  feedback_handler.py  feedback_repository.py  feedback_service.py
pdf_bot/file/: __init__.py  file_constants.py  file_handler.py  file_handlers.py  file_service.py
pdf_bot/file_handler/: __init__.py  file_handler.py
pdf_bot/file_processor/: __init__.py  abstract_file_processor.py  abstract_file_task_processor.py  errors.py  file_task_mixin.py
pdf_bot/file_task/: __init__.py  file_task_service.py
pdf_bot/files/: __init__.py  black_white.py  compress.py  crop.py  crypto.py  document.py  file.py  image.py  ocr.py  photo.py  rename.py  rotate.py  scale.py  split.py  text.py  utils.py
pdf_bot/grayscale/: __init__.py  grayscale_service.py
pdf_bot/image/: __init__.py  constants.py  image_handlers.py  image_service.py
pdf_bot/image_handler/: __init__.py  batch_image_handler.py  batch_image_service.py  image_handler.py
pdf_bot/image_processor/: __init__.py  abstract_image_processor.py  beautify_image_processor.py  image_processor.py  image_task_processor.py  image_to_pdf_processor.py  models.py
pdf_bot/io/: __init__.py  io_service.py
pdf_bot/language/: __init__.py  language_handler.py  language_repository.py  language_service.py  models.py
pdf_bot/language_new/: __init__.py  language_repository.py  language_service.py
pdf_bot/log/: __init__.py  log_handler.py
pdf_bot/merge/: __init__.py  constants.py  merge_handler.py  merge_handlers.py  merge_service.py
pdf_bot/payment/: __init__.py  models.py  payment_handler.py  payment_service.py
pdf_bot/pdf/: __init__.py  exceptions.py  models.py  pdf_service.py
pdf_bot/pdf_processor/: __init__.py  abstract_pdf_processor.py  abstract_pdf_select_and_text_processor.py  abstract_pdf_text_input_processor.py  compress_pdf_processor.py  crop_pdf_processor.py  decrypt_pdf_processor.py  encrypt_pdf_processor.py  extract_pdf_image_processor.py  extract_pdf_text_processor.py  grayscale_pdf_processor.py  ocr_pdf_processor.py  pdf_task_processor.py  pdf_to_image_processor.py  preview_pdf_processor.py  rename_pdf_processor.py  rotate_pdf_processor.py  scale_pdf_processor.py  split_pdf_processor.py
pdf_bot/photos/: __init__.py  pdf_to_photo.py  photo_to_pdf.py
pdf_bot/rename/: __init__.py  rename_constants.py  rename_service.py
pdf_bot/rotate/: __init__.py  rotate_constants.py  rotate_service.py
pdf_bot/scale/: __init__.py  scale_constants.py  scale_service.py
pdf_bot/split/: __init__.py  split_constants.py  split_service.py
pdf_bot/telegram/: __init__.py  exceptions.py  telegram_service.py
pdf_bot/telegram_dispatcher/: __init__.py  telegram_dispatcher.py
pdf_bot/telegram_handler/: __init__.py  abstract_telegram_handler.py
pdf_bot/telegram_internal/: __init__.py  exceptions.py  telegram_service.py
pdf_bot/text/: __init__.py  constants.py  extract_text_service.py  models.py  ocr_service.py  text_handler.py  text_handlers.py  text_repository.py  text_service.py
pdf_bot/watermark/: __init__.py  constants.py  watermark_handler.py  watermark_handlers.py  watermark_service.py
pdf_bot/webpage/: __init__.py  exceptions.py  webpage_handler.py  webpage_service.py
tests/: conftest.py  path_test_mixin.py  test_container.py  test_containers.py  test_models.py
tests/account/: test_account_repository.py  test_account_service.py
tests/analytics/: test_analytics_repository.py  test_analytics_service.py
tests/cli/: test_cli_service.py
tests/command/: test_command_handler.py  (+1 more)
(+161 files in other folders)
