[tool.poetry]
name = "pdf-bot"
version = "1.0.0"
description = "Telegram bot that can do a lot of things related to PDF files."
authors = ["zeshuaro <zeshuaro@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.12.2"
Babel = "2.14.0"
google-cloud-datastore = "2.19.0"
humanize = "4.9.0"
img2pdf = "0.5.1"
ocrmypdf = "16.1.2"
pdf2image = "==1.17.0"
"pdfminer.six" = "20231228"
python-telegram-bot = { extras = [
    "callback-data",
    "rate-limiter",
    "webhooks",
], version = "==21.0.1" }
requests = "2.31.0"
slack-sdk = "3.27.1"
weasyprint = "61.2"
noteshrink = { git = "https://github.com/zeshuaro/noteshrink", rev = "a74a17f7cf3d2eae5811bf970ce88467ba37f51c" }
pdf-diff = { git = "https://github.com/zeshuaro/pdf-diff", rev = "6fe2f136906f1ecc9777c31aa846cd6a287c74b6" }
langdetect = "1.0.9"
loguru = "0.7.2"
sentry-sdk = "1.43.0"
dependency-injector = { git = "https://github.com/anton-petrov/python-dependency-injector", rev = "a245e32e8286d0df34a6a731bf62fa86504ce6aa" }
pdfCropMargins = "==2.0.3"
pycryptodome = "3.20.0"
pydantic = { extras = ["dotenv"], version = "==2.6.4" }
pypdf = "4.1.0"
pikepdf = "8.13.0"
pydantic-settings = "2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
pytest-cov = "4.1.0"
pre-commit = "==3.6.2"
mypy = "1.9.0"
types-requests = "2.31.0.20240311"
pytest-asyncio = "0.23.6"
ruff = "==0.3.3"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", # MissingTypeSelf
    "ANN102", # MissingTypeCls
    "ANN401", # DynamicallyTypedExpression
    "COM812", # trailing-comma-missing
    "FBT",    # flake8-boolean-trap
    "ISC001", # flake8-implicit-str-concat (conflicts with formatter)
    "PD",     # pandas-vet
    "S603",   # subprocess-without-shell-equals-true

    # D10* rules are all related to missing docstring
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"pdf_bot/language/language_service.py" = [
    "RUF001", # AmbiguousUnicodeCharacterString
]
"tests/pdf_processor/test_abstract_pdf_select_and_text_processor.py" = [
    "SLF001", # private-member-access
]
"tests/pdf_processor/test_abstract_pdf_text_input_processor.py" = [
    "SLF001", # private-member-access
]
"tests/**/*.py" = [
    "S101",    # AssertUsed
    "S105",    # HardcodedPasswordString
    "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ['pdf_bot.log.*']
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    'weasyprint.*',
    'langdetect.*',
    'img2pdf.*',
    'pdf2image.*',
    'pdf_diff.*',
    'noteshrink.*',
    'google.*',
    'pdfCropMargins.*',
]
ignore_missing_imports = true

[tool.coverage.run]
relative_files = true
branch = true
source = ["pdf_bot"]
omit = ['pdf_bot/__main__.py', 'pdf_bot/log/*', "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
